# LibRA Main CMakeLists.txt - Clean modular approach
# Copyright 2025 Associated Universities, Inc. Washington DC, USA.

cmake_minimum_required(VERSION 3.18)
project("LibRA Apps"
    DESCRIPTION "LibRA CL, C/C++, Py Interfaces"
    HOMEPAGE_URL https://github.com/ARDG-NRAO/LibRA
    LANGUAGES CXX Fortran C)



# Path and directory setup
include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/paths.cmake)
# message("================ Top-level CMAKE_MODULE_PATH after paths.cmake ================")
message("CMAKE_MODULE_PATH: ${CMAKE_MODULE_PATH}")
message("Testing if FindWCSLIB.cmake can be found...")
find_file(WCSLIB_FIND_MODULE FindWCSLIB.cmake PATHS ${CMAKE_MODULE_PATH})
message("FindWCSLIB.cmake found at: ${WCSLIB_FIND_MODULE}")
message("Testing find_package(WCSLIB) at top level...")
find_package(WCSLIB QUIET)
message("Top-level WCSLIB_FOUND: ${WCSLIB_FOUND}")
# message("================ End MODULE_PATH debug ================")

# Load project configuration
include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/LibraConfig.cmake)

# Use spack environment if set
if(LIBRA_USE_SPACK)
  include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/Findspackenv.cmake)
endif()

# Print summary of machine and LIBRA configuration
include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/PrintLibraSummary.cmake)
print_libra_summary()

# Include dependencies
include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/dependencies/Kokkos.cmake)
include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/dependencies/FFTW.cmake)
include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/dependencies/HPG.cmake)
include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/dependencies/Casacore.cmake)
include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/dependencies/Parafeed.cmake)
include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/dependencies/Pybind11.cmake)

# Profiling dependencies (only included if profiling is enabled)
if(LIBRA_ENABLE_NVTX)
  include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/dependencies/NVTX.cmake)
  include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/dependencies/KokkosTools.cmake)
endif()

# Build gtest on if tests are enabled
if(BUILD_TESTING)
  include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/dependencies/GTest.cmake)
  # Materialize gold standard reference data submodule.
  # Force the public https URL and sync it into .git/config first, so clones
  # that were initialized against the SSH URL (which needs a key, e.g. in
  # containers/CI) are redirected to the anonymously-cloneable mirror.
  execute_process(
    COMMAND git submodule sync apps/src/tests/gold_standard
    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
  )
  execute_process(
    COMMAND git submodule update --init apps/src/tests/gold_standard
    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
    RESULT_VARIABLE _gold_standard_result
  )
  if(NOT _gold_standard_result EQUAL 0)
    message(WARNING "gold_standard submodule init failed -- tests requiring reference data may fail")
  endif()

  # Emit a top-level CTestTestfile.cmake at ${BUILD_DIR}/Libra so that
  # `ctest --test-dir <build-dir>/Libra` recurses into both ExternalProject
  # test trees (src/ and apps/). Run with -R '^test_' to skip legacy t<Name>
  # tests.
  file(MAKE_DIRECTORY ${BUILD_DIR}/Libra)
  file(WRITE ${BUILD_DIR}/Libra/CTestTestfile.cmake
    "# Generated by top-level LibRA CMakeLists.txt\n"
    "subdirs(\"src\")\n"
    "subdirs(\"apps\")\n")
endif()

# Include components
include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/components/Casacpp.cmake)
include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/components/Apps.cmake)
include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/components/Frameworks.cmake)
include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/components/Scripts.cmake)

# Exodus - Needs to be here so Apps is created first.
if(LIBRA_USE_EXODUS)
  include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/dependencies/exodus.cmake)
endif()
